syntax = "proto3";
package sgenetwork.sge.orderbook;

import "gogoproto/gogo.proto";
import "sgenetwork/sge/orderbook/exposure.proto";
import "sgenetwork/sge/orderbook/orderbook.proto";
import "sgenetwork/sge/orderbook/params.proto";
import "sgenetwork/sge/orderbook/participation.proto";
import "sgenetwork/sge/orderbook/stats.proto";

option go_package = "github.com/sge-network/sge/x/legacy/orderbook/types";

// GenesisState defines the orderbook module's genesis state.
message GenesisState {
  // params defines all the parameters related to order book.
  Params params = 1 [ (gogoproto.nullable) = false ];

  // order_book_list defines the order books available at genesis.
  repeated OrderBook order_book_list = 2 [ (gogoproto.nullable) = false ];

  // order_book_participation_list defines the book participations available at
  // genesis.
  repeated OrderBookParticipation order_book_participation_list = 3
      [ (gogoproto.nullable) = false ];

  // order_book_exposure_list defines the order book exposures available at
  // genesis.
  repeated OrderBookOddsExposure order_book_exposure_list = 4
      [ (gogoproto.nullable) = false ];

  // participation_exposure_list defines the participation exposures available
  // at genesis.
  repeated ParticipationExposure participation_exposure_list = 5
      [ (gogoproto.nullable) = false ];

  // participation_exposure_by_index_list defines the participation exposures by
  // the indices available at genesis.
  repeated ParticipationExposure participation_exposure_by_index_list = 6
      [ (gogoproto.nullable) = false ];

  // historical_participation_exposure_list defines the historical participation
  // exposures available at genesis.
  repeated ParticipationExposure historical_participation_exposure_list = 7
      [ (gogoproto.nullable) = false ];

  // historical_participation_exposure_list defines the participation bet pair
  // exposures available at genesis.
  repeated ParticipationBetPair participation_bet_pair_exposure_list = 8
      [ (gogoproto.nullable) = false ];

  // stats is the statistics of the order book.
  OrderBookStats stats = 9 [ (gogoproto.nullable) = false ];
}
